added scroll animations

--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "firebase/app";
-        import { getAnalytics } from "firebase/analytics";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-        apiKey: "AIzaSyCgI_Otzz90Ud5PTazRvuWs9AkxEXWvuQ8",
-        authDomain: "srinith-portfolio.firebaseapp.com",
-        projectId: "srinith-portfolio",
-        storageBucket: "srinith-portfolio.appspot.com",
-        messagingSenderId: "615147329817",
-        appId: "1:615147329817:web:ce1a64fbdcf229d0790d88",
-        measurementId: "G-9RGCL4QMXL"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
+    <title>STORM</title>
+		<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+		<script type="module">
+			// Import the functions you need from the SDKs you need
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+			import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
+			// TODO: Add SDKs for Firebase products that you want to use
+			// https://firebase.google.com/docs/web/setup#available-libraries
+		
+			// Your web app's Firebase configuration
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			const firebaseConfig = {
+				apiKey: "AIzaSyCgI_Otzz90Ud5PTazRvuWs9AkxEXWvuQ8",
+				authDomain: "srinith-portfolio.firebaseapp.com",
+				projectId: "srinith-portfolio",
+				storageBucket: "srinith-portfolio.appspot.com",
+				messagingSenderId: "615147329817",
+				appId: "1:615147329817:web:ce1a64fbdcf229d0790d88",
+				measurementId: "G-9RGCL4QMXL"
+			};
+		
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+			const analytics = getAnalytics(app);
+		</script>
 		<link rel="stylesheet" href="profile.css">
 		<script src="profile.js" defer></script>
 </head>
@@ -41,9 +42,9 @@
 			</div>
 	</div>
 	<div class="scrolldown-gif-div">
-			<img src="assets/icons8-double-down.gif" id="scrolldown-gif">
+			<a href="index.html#projects-container-div"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
 	</div>
-	<div class="projects-container-div">
+	<div class="projects-container-div" id="projects-container-div">
 			<div class="project-container-title-div">
 					<h1 style="font-size: 36px;">Projects</h1>
 			</div>
@@ -51,10 +52,13 @@
 					<div class="project-image-div"><img src="assets\project-sample-pic.png" id="project-image" ></div>
 					<div class="project-description">
 							<h2>This is a sample description of the project</h2>
-							<button onclick="LoginPageSwitcher()" class="calset-login-btn">CalSET</button>
+							<button onclick="LoginPageSwitcher()" class="calset-login-btn" target="_blank">CalSET</button>
 					</div>
 			</div>
 	</div>
+	<!-- <div id="testing">
+		<h1 id="test-text">Testing</h1>
+	</div> -->
 
 </body>
 </html>
