--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
 			</div>
 	</div>
 	<div class="scrolldown-gif-div">
-			<a href="index.html#projects-container-div"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
+			<a href="index.html#projects-container-div" style="transition:all 1s;"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
 	</div>
 	<div class="projects-container-div" id="projects-container-div">
 			<div class="project-container-title-div">
-					<h1 style="font-size: 36px;">Projects</h1>
+					<h1 id="project-text">Projects</h1>
 			</div>
 			<div class="projects-container">
 					<div class="project-image-div"><img src="assets\project-sample-pic.png" id="project-image" ></div>
@@ -59,6 +59,5 @@
 	<!-- <div id="testing">
 		<h1 id="test-text">Testing</h1>
 	</div> -->
-
 </body>
 </html>
