added the scroll for projects list

--- a/public/index.html
+++ b/public/index.html
@@ -42,18 +42,27 @@
 			</div>
 	</div>
 	<div class="scrolldown-gif-div">
-			<a href="index.html#projects-container-div" style="transition:all 1s;"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
+			<a href="index.html#project-text" style="transition:all 1s;"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
+	</div>
+	<div class="project-container-title-div">
+			<h1 id="project-text">Projects</h1>
 	</div>
 	<div class="projects-container-div" id="projects-container-div">
-			<div class="project-container-title-div">
-					<h1 id="project-text">Projects</h1>
-			</div>
-			<div class="projects-container">
-					<div class="project-image-div"><img src="assets\project-sample-pic.png" id="project-image" ></div>
+			<div class="projects-scrolling-div">
+				<div class="projects-container">
+						<div class="project-image-div"><img src="assets\project-sample-pic.png" id="project-image" ></div>
+						<div class="project-description">
+								<h2>This is a sample description of the project</h2>
+								<button onclick="LoginPageSwitcher()" class="calset-login-btn" target="_blank">CalSET</button>
+						</div>
+				</div>
+				<div class="projects-container">
+					<div class="project-image-div"><img src="assets\project-sample-2.png" id="project-image" ></div>
 					<div class="project-description">
-							<h2>This is a sample description of the project</h2>
-							<button onclick="LoginPageSwitcher()" class="calset-login-btn" target="_blank">CalSET</button>
+							<h2>This is a sample description of the project 2</h2>
+							<button onclick="LoginPageSwitcher()" class="calset-login-btn" target="_blank">SETCAL</button>
 					</div>
+				</div>
 			</div>
 	</div>
 	<!-- <div id="testing">
