--- a/public/index.html
+++ b/public/index.html
@@ -45,23 +45,23 @@
 			<a onclick="scrollToProjects()" style="scroll-behavior: smooth;transition: 1s;"><img src="assets/icons8-double-down.gif" id="scrolldown-gif"></a>
 	</div>
 	<div class="project-container-title-div">
-			<h1 id="project-text">Projects</h1>
+			<h1 id="project-text"><u>Projects</u></h1>
 	</div>
 	<div class="projects-container-div" id="projects-container-div">
 			<div class="scroll-btns-div">
-				<a onclick="ProjectScroll('up')"><img src="assets\icons8-chevron-up-40.png"></a>
-				<a onclick="ProjectScroll('down')"><img src="assets\icons8-chevron-down-40.png"></a>
+				<a onclick="ProjectScroll('up')"><img src="assets\icons8-chevron-up-60.png" ></a>
+				<a onclick="ProjectScroll('down')"><img src="assets\icons8-chevron-down-60.png"></a>
 			</div>
 			<div class="projects-scrolling-div" id="projects-scrolling-div">
 				<div class="projects-container" id="stormcode-app">
-						<div class="project-image-div"><img src="assets\stormcode-pic.png" id="project-image" ></div>
+						<div class="project-image-div"><img src="assets\stormcode-pic.png" class="project-img" id="project-image" ></div>
 						<div class="project-description-div">
 								<h1 class="project-title-name">STORMCODE APP</h1>
 								<h2 class="project-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A simple application made to simplify the learning experience of students, in this app, all the notes, previous year papers, academic syllabus will be available to study and coding in different languages like java, python and c is also possible, this eliminates the  hassle of downloading multiple IDE's for multiple languages.</h2>
 						</div>
 				</div>
 				<div class="projects-container" id="auto-vid-editor">
-					<div class="project-image-div"><img src="assets\auto-videditor-pic.png" id="project-image" ></div>
+					<div class="project-image-div"><img src="assets\auto-videditor-pic.png" class="project-img" id="project-image" ></div>
 					<div class="project-description-div">
 							<h1 class="project-title-name">AUTOMATIC-VIDEO-EDITOR</h1>
 							<h2 class="project-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A simple Terminal based application that takes a image and audio file/spotify playlist link and outputs a video of desired length in mp4 format.
@@ -69,6 +69,7 @@
 								The output file is saved in mp3 form and the length of the video is equal to the length of mp3 file
 								or the spotify playlist.</h2>
 					</div>
+					<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
 				</div>
 			</div>
 	</div>
