--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 		<link rel="stylesheet" href="profile.css">
 		<script src="profile.js" defer></script>
 </head>
-<body>
+<body> 
 	<div class="main-profile-bg">
 			<div class="profile-text">
 					<div class="upper-name-text-div"> <h1 id="upper-name-text">Sai Srinith<br>Gujarathi</h1> </div>
@@ -68,6 +68,14 @@
 								The output file is saved in mp3 form and the length of the video is equal to the length of mp3 file or the spotify playlist.
 								The output file is saved in mp3 form and the length of the video is equal to the length of mp3 file
 								or the spotify playlist.</h2>
+					</div>
+					<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
+				</div>
+				<div class="projects-container" id="score-scrapper">
+					<div class="project-image-div"><img src="assets\score-scrapper-pic.png" class="project-img" id="project-image" ></div>
+					<div class="project-description-div">
+							<h1 class="project-title-name">SCORES-SCRAPPER</h1>
+							<h2 class="project-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The main goal of the project is to return a file(s) containing data about the contest held by codechef known as STARTERS. Basically by usuing selenium I can get the contest rankings site and choose my college as the filter, then by using Beautiful Soup (Python) I can get the raw HTML data and process it furhter for my needs, then finally by using xlsxwriter I can store the data in the form of xlsx sheets for each Division of the contest.</h2>
 					</div>
 					<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
 				</div>
