--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,6 @@
 								The output file is saved in mp3 form and the length of the video is equal to the length of mp3 file
 								or the spotify playlist.</h2>
 					</div>
-					<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
 				</div>
 				<div class="projects-container" id="score-scrapper">
 					<div class="project-image-div"><img src="assets\score-scrapper-pic.png" class="project-img" id="project-image" ></div>
@@ -77,7 +76,14 @@
 							<h1 class="project-title-name">SCORES-SCRAPPER</h1>
 							<h2 class="project-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The main goal of the project is to return a file(s) containing data about the contest held by codechef known as STARTERS. Basically by usuing selenium I can get the contest rankings site and choose my college as the filter, then by using Beautiful Soup (Python) I can get the raw HTML data and process it furhter for my needs, then finally by using xlsxwriter I can store the data in the form of xlsx sheets for each Division of the contest.</h2>
 					</div>
-					<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
+				</div>
+				<!-- If adding a new project remember to updatet the JS file @ProjectScroll() -->
+				<div class="projects-container" id="cal-set">
+					<div class="project-image-div"><img src="assets\cal-set-pic.png" class="project-img" id="project-image" ></div>
+					<div class="project-description-div">
+							<h1 class="project-title-name">CAL-SET</h1>
+							<h2 class="project-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cal-set is a web app that can be used to selectively get data about the contests held by various hosts such as Codechef, CodeForces, HackerRank, Leet code, etc. Ultimatly the app should be able to craete a event and upload it to your google calander for each contest so that you get notified when a contest is about to be held.</h2>
+					</div>
 				</div>
 			</div>
 	</div>
